<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/enter_phone_number"
    android:inputType="phone"
    />
<Button 
	android:id="@+id/btnSelectContact" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:text="@string/select_contact"
	/>    
<EditText
	android:id="@+id/txtPhoneNo"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	/>
<TextView
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/message"
    />
<EditText
	android:id="@+id/txtMessage"
	style="@style/largeTextbox"
	/>
<Button
	android:id="@+id/btnSendSms"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/send_sms"
	/>
<Button 
	android:id="@+id/btnShowLatLon" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:text="@string/show_lat_lon"
	/>
</LinearLayout>
